cmake_minimum_required(VERSION 2.8.12)

#include_directories(${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

message(STATUS "${CMAKE_CURRENT_SOURCE_DIR} : ")
message(${files})

foreach(file ${files})
    get_filename_component(bfile ${file} NAME_WE)
    add_executable(${bfile} ${bfile}.cpp)
#    target_link_libraries(${bfile} CosmosSupport ${COSMOS_LIBS})
    install(TARGETS ${bfile} DESTINATION bin)

    if(${DEPLOY_BIN_FILES_TO_REMOTE} MATCHES "YES")
        add_deployment_binary(${bfile} "bin")
    endif()

    if(${DEPLOY_SRC_FILES_TO_REMOTE} MATCHES "YES")
        add_deployment_source(${bfile}.cpp "src")
    endif()

endforeach()

target_link_libraries(archive CosmosAgent CosmosData)
target_link_libraries(calc_transform CosmosAgent CosmosMath)
target_link_libraries(command_generator CosmosAgent)
target_link_libraries(command_generator_remote CosmosAgent)
target_link_libraries(cosmos_size CosmosAgent)
target_link_libraries(cubesat2obj CosmosCad CosmosData)
target_link_libraries(fast_contacts CosmosAgent CosmosConvert CosmosPhysics)
target_link_libraries(fast_propagator CosmosConvert CosmosPhysics CosmosAgent)
target_link_libraries(file_send_command CosmosAgent CosmosTransfer)
target_link_libraries(file_send_message CosmosAgent CosmosTransfer)
target_link_libraries(get_contacts CosmosPhysics CosmosAgent)
target_link_libraries(get_contacts_tle CosmosPhysics CosmosAgent)
target_link_libraries(gige_ffc CosmosDeviceGeneral)
target_link_libraries(gige_list CosmosDeviceGeneral CosmosError)
target_link_libraries(gige_snap CosmosDeviceGeneral CosmosError)
target_link_libraries(json2tab CosmosJson)
target_link_libraries(julian CosmosAgent CosmosTime)
target_link_libraries(netperf_listen CosmosTime CosmosNetwork CosmosSlip)
target_link_libraries(netperf_send CosmosTime CosmosNetwork CosmosSlip)
target_link_libraries(new_propagator CosmosPhysics)
target_link_libraries(propagator CosmosPhysics CosmosAgent)
target_link_libraries(propagatorv2 CosmosPhysics CosmosAgent)
target_link_libraries(serial_listen CosmosDeviceSerial CosmosError)
target_link_libraries(serial_talk CosmosDeviceSerial CosmosError)
target_link_libraries(state2tle CosmosConvert)
target_link_libraries(tab2json CosmosString CosmosJson)
target_link_libraries(tle2state CosmosNamespace CosmosConvert)
target_link_libraries(udp_listen CosmosAgent)
target_link_libraries(udp_send CosmosAgent)
target_link_libraries(initialize_time CosmosAgent)
target_link_libraries(check_satnogs CosmosAgent CosmosJson CosmosTime CosmosMath)
target_link_libraries(shift_solid_thermal CosmosTime CosmosConvert)
target_link_libraries(i2ctalk CosmosTime CosmosDeviceI2C CosmosError)

