cmake_minimum_required(VERSION 3.1)

#include_directories(${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

message(STATUS "${CMAKE_CURRENT_SOURCE_DIR} : ")
message(${files})

foreach(file ${files})
    get_filename_component(bfile ${file} NAME_WE)
    add_executable(${bfile} ${bfile}.cpp)
#    target_link_libraries(${bfile} CosmosSupport ${COSMOS_LIBS})
    install(TARGETS ${bfile} DESTINATION bin)

    if(${DEPLOY_BIN_FILES_TO_REMOTE} MATCHES "YES")
        add_deployment_binary(${bfile} "bin")
    endif()

    if(${DEPLOY_SRC_FILES_TO_REMOTE} MATCHES "YES")
        add_deployment_source(${bfile}.cpp "src")
    endif()

endforeach()

target_link_libraries(archive CosmosAgent CosmosData)
target_link_libraries(calc_transform CosmosAgent CosmosMath)
target_link_libraries(command_generator CosmosScheduler CosmosAgent)
target_link_libraries(command_generator_remote CosmosEvent CosmosAgent)
target_link_libraries(cubesat2obj CosmosCad CosmosData)
target_link_libraries(fast_contacts CosmosAgent CosmosConvert CosmosPhysics)
target_link_libraries(get_contacts CosmosPhysics CosmosAgent)
target_link_libraries(get_contacts_tle CosmosPhysics CosmosAgent)
target_link_libraries(gige_ffc CosmosDeviceGeneral)
target_link_libraries(gige_list CosmosDeviceGeneral CosmosLog)
target_link_libraries(gige_snap CosmosDeviceGeneral CosmosLog)
target_link_libraries(json2tab CosmosJson)
target_link_libraries(julian CosmosAgent CosmosTime)
target_link_libraries(mjd CosmosAgent CosmosTime)
target_link_libraries(netperf_listen CosmosTime CosmosNetwork CosmosSlip)
target_link_libraries(netperf_send CosmosTime CosmosNetwork CosmosSlip)
target_link_libraries(propagatorv2 CosmosAgent CosmosPhysics CosmosAgent)
target_link_libraries(targetsim CosmosAgent CosmosPhysics CosmosAgent)
target_link_libraries(propagator_web CosmosPhysics CosmosPacket)
target_link_libraries(propagator_web_json CosmosPhysics CosmosPacket)
target_link_libraries(serial_listen CosmosDeviceSerial CosmosLog)
target_link_libraries(serial_talk CosmosDeviceSerial CosmosLog CosmosTime)
target_link_libraries(state2tle CosmosConvert)
target_link_libraries(tab2json CosmosString CosmosConvert CosmosJson)
target_link_libraries(tle2state CosmosNamespace CosmosConvert)
target_link_libraries(udp_listen CosmosAgent)
target_link_libraries(udp_send CosmosAgent)
target_link_libraries(initialize_time CosmosAgent)
target_link_libraries(check_satnogs CosmosAgent CosmosJson CosmosTime CosmosMath)
target_link_libraries(shift_solid_thermal CosmosTime CosmosConvert)
target_link_libraries(i2ctalk CosmosTime CosmosDeviceI2C CosmosLog)
target_link_libraries(make_path CosmosData)

